--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
     "nodemailer": "^4.7.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.8.6",
     "react-font-awesome-5": "^0.2.2",
+    "react-moment": "^0.9.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "0.9.5",
     "react-svg": "^10.0.20",
