--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "0.9.5",
     "react-svg": "^10.0.20",
     "socket.io-client": "^2.3.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "validator": "^10.6.0"
   },
   "devDependencies": {
