--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
+    "http-proxy-middleware": "^0.20.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
     "nodemailer": "^4.7.0",
@@ -45,6 +46,7 @@
     "type": "git",
     "url": "https://github.com/Dcodefrenzy"
   },
+  "proxy": "http://192.168.33.12:3000",
   "keywords": [
     "Health",
     "care",
