--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^16.0.0",
+    "@ckeditor/ckeditor5-react": "^2.1.0",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.3.1",
@@ -19,6 +21,7 @@
     "react-moment": "^0.9.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "0.9.5",
+    "react-scroll": "^1.7.16",
     "react-svg": "^10.0.20",
     "socket.io-client": "^2.3.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
