--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.8.6",
     "react-font-awesome-5": "^0.2.2",
+    "react-google-charts": "^3.0.15",
     "react-moment": "^0.9.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "0.9.5",
