--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-adapter-ckfinder": "^17.0.0",
     "@ckeditor/ckeditor5-build-classic": "^16.0.0",
+    "@ckeditor/ckeditor5-ckfinder": "^17.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
+    "@ckeditor/ckeditor5-upload": "^17.0.0",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.3.1",
+    "ckeditor4-react": "^1.0.1",
+    "draft-js": "^0.11.4",
+    "draft-js-image-plugin": "^2.0.7",
+    "draft-js-plugins-editor": "^3.0.0",
     "font-awesome": "^4.7.0",
     "http-proxy-middleware": "^0.20.0",
     "moment": "^2.24.0",
@@ -29,6 +36,7 @@
     "validator": "^10.6.0"
   },
   "devDependencies": {
+    "@ckeditor/ckeditor5-alignment": "^17.0.0",
     "@fortawesome/fontawesome-free": "^5.10.2",
     "body-parser": "^1.19.0",
     "ejs": "^1.0.0",
