--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "0.9.5",
     "react-scroll": "^1.7.16",
+    "react-share": "^4.1.0",
     "react-svg": "^10.0.20",
     "socket.io-client": "^2.3.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
