--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^4.7.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "react": "^16.8.6",
+    "react-beforeunload": "^2.2.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.8.6",
     "react-font-awesome-5": "^0.2.2",
