--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-scroll": "^1.7.16",
     "react-share": "^4.1.0",
     "react-svg": "^10.0.20",
+    "simple-peer": "^9.8.0",
     "socket.io-client": "^2.3.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "validator": "^10.6.0"
