--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@ckeditor/ckeditor5-upload": "^17.0.0",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "4.3.1",
     "ckeditor4-react": "^1.0.1",
     "draft-js": "^0.11.4",
     "draft-js-image-plugin": "^2.0.7",
