--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "moment-timezone": "^0.5.27",
     "nodemailer": "^4.7.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "react": "^16.8.6",
+    "react": "^17.0.0",
     "react-beforeunload": "^2.2.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.8.6",
@@ -29,7 +29,7 @@
     "react-google-charts": "^3.0.15",
     "react-moment": "^0.9.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "0.9.5",
+    "react-scripts": "^4.0.0",
     "react-scroll": "^1.7.16",
     "react-share": "^4.1.0",
     "react-svg": "^10.0.20",
@@ -71,5 +71,17 @@
     "messenger"
   ],
   "author": "Fakunle Ayodeji",
-  "license": "ISC"
+  "license": "ISC",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
